fixed problem with task description (word-wrap and flex-wrap), fixed animation at closing tasks

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;*/
   left: 25%;
   margin-left: 0;
   width: 50%;
@@ -138,6 +138,7 @@ body{
   padding: 10px;
 }
 #task-desc {
+  display: block;
   font-family: monospace;
   color: white;
   opacity: 0.9;
@@ -146,9 +147,9 @@ body{
   background-color: #212121;
   font-size: 20px;
   line-height: normal;
-  white-space: pre-wrap;
+  /*white-space: pre-wrap;*/
   word-wrap: break-word;
-  word-break: break-all;
+/*  word-break: break-all;*/
   height: auto;
 
 }
